src/test/ui/parser/issue-81097.rs
fn main() {
    drop::<[(), 0]>([]); //~ ERROR: expected `;`, found `,`
}
